src/objects/Additional_Service__c.object
<CustomObject>
    <description>This custom object will hold additional services to be used in Customer Service cases. Data for additional services will be provided by PostNord Product Master Data</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assortment_Name__c</fullName>
        <label>Assortment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_ID__c</fullName>
        <label>Business Area ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Name__c</fullName>
        <label>Business Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_ID__c</fullName>
        <label>Dummy Three ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Three_Name__c</fullName>
        <label>Dummy Three Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <externalId>true</externalId>
        <label>Global ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <label>Marked for Deletion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Article_ID__c</fullName>
        <label>Product/Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Additional Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Article_ID__c</columns>
        <columns>Source_ID__c</columns>
        <columns>Sales_Area__c</columns>
        <columns>Assortment_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Country_of_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Additional Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>